<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.bulbrange.todo</groupId>
  <artifactId>todo</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>todo</name>

  <build>
    <resources>
    	<resource>
    		<directory>
    			src/main/resources/img/
    		</directory>
    	</resource>
    </resources>
  	<plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <!-- Dependencies -->
	<dependencies>
		<dependency>
		    <groupId>mysql</groupId>
		    <artifactId>mysql-connector-java</artifactId>
		    <version>5.1.46</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
		    <groupId>junit</groupId>
		    <artifactId>junit</artifactId>
		    <version>4.12</version>
		    <scope>test</scope>
		</dependency>

	<!-- https://mvnrepository.com/artifact/org.eclipse.uml2/org.eclipse.uml2.uml -->
	<dependency>
	    <groupId>org.eclipse.uml2</groupId>
	    <artifactId>org.eclipse.uml2.uml</artifactId>
	    <version>3.1.0.v201006071150</version>
	</dependency>

	</dependencies>

</project>